# aichallenge_final_rits-ubi

./: README.md  autoware.proj.repos  simulators.repos
.github/workflows/: update-beta-branch.yaml
map/: README.md
map/data/: lanelet2_map.osm
scripts/: B_set_goal.sh  B_set_start.sh  camera_tf.sh  can_config.sh  launch_camera.sh  lsim.sh  psim.sh  record.sh  run.sh
scripts/config/: qos_profile_overrides_aichallenge.yaml
src/autoware/aip_launcher/aip_aichallenge_launch/launch/: lidar.launch.xml  pointcloud_preprocessor.launch.py  sensing.launch.xml
src/autoware/calibration_tools/: README_jp.md  build_depends.repos
src/autoware/calibration_tools/common/tier4_calibration_msgs/: CMakeLists.txt
src/autoware/calibration_tools/control/stop_accel_evaluator/: CMakeLists.txt  package.xml
src/autoware/calibration_tools/control/stop_accel_evaluator/src/: stop_accel_evaluator_node.cpp
src/autoware/calibration_tools/control/vehicle_cmd_analyzer/: CMakeLists.txt  package.xml
src/autoware/calibration_tools/control/vehicle_cmd_analyzer/src/: vehicle_cmd_analyzer.cpp
src/autoware/calibration_tools/localization/deviation_estimation_tools/: ReadMe.md
src/autoware/calibration_tools/localization/deviation_estimation_tools/deviation_estimator/: CMakeLists.txt  package.xml
src/autoware/calibration_tools/localization/deviation_estimation_tools/deviation_evaluator/: CMakeLists.txt  package.xml
src/autoware/calibration_tools/sensor/: README.md
src/autoware/calibration_tools/sensor/extrinsic_calibration_manager/: CMakeLists.txt  package.xml
src/autoware/calibration_tools/sensor/extrinsic_calibration_manager/launch/: calibration.launch.xml
src/autoware/calibration_tools/sensor/extrinsic_calibration_manager/src/: extrinsic_calibration_manager_node.cpp
src/autoware/calibration_tools/sensor/extrinsic_manual_calibrator/: CMakeLists.txt  package.xml
src/autoware/calibration_tools/sensor/extrinsic_map_based_calibrator/: CMakeLists.txt  package.xml
src/autoware/calibration_tools/sensor/extrinsic_map_based_calibrator/include/extrinsic_map_based_calibrator/: extrinsic_map_based_calibrator.hpp
src/autoware/calibration_tools/sensor/extrinsic_map_based_calibrator/src/: extrinsic_map_based_preprocessing.cpp
src/autoware/calibration_tools/sensor/intrinsic_camera_calibration/: CMakeLists.txt  package.xml
src/autoware/calibration_tools/sensor/intrinsic_camera_calibration/launch/: calibration.launch.xml
src/autoware/calibration_tools/sensor/point_cloud_accumulator/: CMakeLists.txt  package.xml
src/autoware/calibration_tools/sensor/point_cloud_accumulator/src/: point_cloud_accumulator.cpp
src/autoware/calibration_tools/system/tunable_static_tf_broadcaster/: CMakeLists.txt  README.md  package.xml
src/autoware/calibration_tools/vehicle/calibration_adapter/: CMakeLists.txt  package.xml
src/autoware/calibration_tools/vehicle/calibration_adapter/src/: calibration_adapter_node.cpp
src/autoware/calibration_tools/vehicle/pitch_checker/: CMakeLists.txt  package.xml
src/autoware/calibration_tools/vehicle/pitch_checker/include/pitch_checker/: pitch_checker.hpp
src/autoware/calibration_tools/vehicle/pitch_checker/src/: pitch_checker_node.cpp
src/autoware/calibration_tools/vehicle/steer_offset_estimator/: package.xml
src/autoware/calibration_tools/vehicle/steer_offset_estimator/launch/: steer_offset_estimtor.launch.xml
src/autoware/calibration_tools/vehicle/steer_offset_estimator/src/: steer_offset_estimator_node.cpp
src/autoware/launcher/autoware_launch/launch/: autoware.launch.xml  logging_simulator.launch.xml
src/autoware/launcher/autoware_launch/rviz/: autoware.rviz
src/autoware/launcher/control_launch/config/trajectory_follower/: longitudinal_controller.param.yaml  mpc_follower.param.yaml
src/autoware/launcher/localization_launch/launch/twist_estimator/: twist_estimator.launch.xml
src/autoware/launcher/perception_launch/: package.xml
src/autoware/launcher/perception_launch/launch/: perception.launch.xml
src/autoware/launcher/simulator_launch/launch/: simulator.launch.xml
src/autoware/universe/launch/tier4_perception_launch/: package.xml
src/autoware/universe/launch/tier4_perception_launch/launch/: perception.launch.xml
src/autoware/universe/old_planning/behavior_path_planner/src/: behavior_path_planner_node.cpp
src/autoware/universe/perception/lidar_apollo_instance_segmentation/launch/: lidar_apollo_instance_segmentation.launch.xml
src/autoware/universe/perception/lidar_centerpoint/launch/: lidar_centerpoint.launch.xml
src/autoware/universe/perception/map_based_prediction/config/: map_based_prediction.param.yaml
src/autoware/universe/planning/external_velocity_limit_selector/config/: default.param.yaml
src/autoware/universe/planning/obstacle_avoidance_planner/config/: obstacle_avoidance_planner.param.yaml
src/autoware/universe/planning/obstacle_stop_planner/config/: obstacle_stop_planner.param.yaml
src/autoware/universe/simulator/dummy_perception_publisher/launch/: dummy_perception_publisher.launch.xml
src/description/sensor/aip_description/aip_aichallenge/: CMakeLists.txt  package.xml
src/description/sensor/aip_description/aip_aichallenge/urdf/: sensor_kit.xacro  sensors.xacro
src/description/vehicle/ymc_golfcart_description/: CMakeLists.txt  README.md  package.xml
src/description/vehicle/ymc_golfcart_description/config/: vehicle_info.param.yaml
src/description/vehicle/ymc_golfcart_description/launch/: vehicle_interface.launch.xml
src/description/vehicle/ymc_golfcart_description/urdf/: vehicle.xacro
tuning/: control_tuning.xml
(+44 files in other folders)
