<?xml version="1.0"?>
<package format="2">
  <name>ymc_golfcart_description</name>
  <version>0.1.0</version>
  <description>The ymc_golfcart_description package</description>

  <maintainer email="kenji.miyake@tier4.jp">Kenji Miyake</maintainer>
  <license>Apache2</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>individual_params</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
